# pre-processing

./: .gitignore  README.md  alignment.ipynb  base_utils.py  batch_processing.py  file_names.txt  flow.py  generate_list.py  pyproject.toml  reorg_files.py  requirements.txt  run_calib.py  run_calib.sh  run_flow.py  run_processing.py  run_track.sh  track.cmd  track_names.txt
collect/: batch_collect.py  collect_files.py  convert_to_mp4.py  convert_track.sh  convert_video.sh  generate_index.py  utils.py
collect/archive/: convert_to_mp4.py  fix_missing_mat.py
example/: alignment.ipynb  validation.ipynb
flow/: calibrate.py  compute.py  constants.py  file_names.txt  generate_list.py  run_calib.py  run_calib.sh  run_calib_cluster.py
jaaba/: batch_jaaba.py  runJAABA.m  run_jaaba.sh
tracking/: apt_config.json  convert_trk.m  run_track.py  run_track.sh  track_names.txt
training/: cv_track.sh  labels.json  train.cmd  train_config.json
utils/: base_utils.py
