[tool.poetry]
name = "video-calib"
version = "0.1.0"
description = ""
authors = ["lingqiz <zlqzcc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
pyqt5 = "^5.15.11"
opencv-python-headless = "^4.10.0.84"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
